# bulletin-py

./: .gitattributes  .gitignore  AGENTS.md  CITATION.cff  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  sonar-project.properties
.github/workflows/: pages.yml  publish-testpypi.yml  sonar.yml  tests.yml
docs/: development.md  getting-started.md  index.md
docs/api/: doue.md  eurlex.md
docs/use_cases/: eurlex.md
scripts/: run_doue.ipynb  run_doue.py  run_eurlex.ipynb  run_eurlex.py
scripts/use_cases/: case_1_ai_evolution.ipynb  case_2_institution_comparison.ipynb  case_3_reproducible_dataset.py  case_4_tariff_analysis.ipynb  dataset_eu_disease_acts_2017_2023.csv  dataset_eu_disease_acts_2020_2025.csv  dataset_eu_disease_acts_2020_2026.csv  dataset_eu_disease_acts_2023_2026.csv
src/bulletin/: __init__.py
src/bulletin/doue/: __init__.py  _connector.py  client.py  constants.py  converters.py  exceptions.py  models.py
src/bulletin/doue/api/: __init__.py  client.py  models.py
src/bulletin/doue/repository/: __init__.py  _connector.py
src/bulletin/eurlex/: __init__.py  constants.py  converters.py  exceptions.py
src/bulletin/eurlex/api/: __init__.py  client.py  models.py
src/bulletin/eurlex/repository/: __init__.py  _connector.py
tests/: conftest.py
tests/doue/: test_client.py  test_connector.py  test_converters.py  test_models.py
tests/eurlex/: test_client.py  test_connector.py  test_converters.py
