[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "bulletin-fetcher"
version = "0.1.0"
description = "A Python package for searching and managing official bulletins"
readme = "README.md"
requires-python = ">=3.7"
license-files = ["LICENSE"]
authors = [
    {name = "Diego González Suárez", email = "gonzalezsdiego@uniovi.es"}
]
keywords = ["bulletin", "official", "legal", "search", "european union", "eu", "sparql"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://diegoglezsu.github.io/bulletin-fetcher"
Repository = "https://github.com/diegoglezsu/bulletin-fetcher.git"
Issues = "https://github.com/diegoglezsu/bulletin-fetcher/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.900",
]
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py37"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as requiring network access/integration with live services",
]
